<resources>
    <string name="app_name">Areal</string>
    <string name="action_settings">Settings</string>
    <string name="Ro">Roux acadmey</string>
    <string name="rr">Register here</string>
    <string name="name">Name:</string>
    <string name="second">Last name:</string>
    <string name="emai">email</string>
    <string name="Email">Email</string>
    <string name="reg">REGISTER</string>
    <string name="action_optioninmenu">option</string>
    <string name="title_activity_detail">detail</string>
    <string name="title_activity_datalist">DATALIST</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
